; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_tc.func.c_beep_cmd.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_tc.func.c_beep_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pintr_disabled = common dso_local global i32 0, align 4
@disabled_cleanup = common dso_local global i32 0, align 4
@beepcmd_active = common dso_local global i32 0, align 4
@STRunalias = common dso_local global i32* null, align 8
@STRbeepcmd = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@.str.1 = private unnamed_addr constant [33 x i8] c"Faulty alias 'beepcmd' removed.\0A\00", align 1
@whyles = common dso_local global i32 0, align 4
@aliases = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @beep_cmd() #0 {
  %1 = load i32, i32* @pintr_disabled, align 4
  %2 = add nsw i32 %1, 1
  store i32 %2, i32* @pintr_disabled, align 4
  %3 = load i32, i32* @disabled_cleanup, align 4
  %4 = call i32 @cleanup_push(i32* @pintr_disabled, i32 %3)
  %5 = load i32, i32* @beepcmd_active, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %13

7:                                                ; preds = %0
  %8 = load i32*, i32** @STRunalias, align 8
  %9 = load i32*, i32** @STRbeepcmd, align 8
  %10 = call i32 @aliasrun(i32 2, i32* %8, i32* %9)
  %11 = call i32 @CGETS(i32 22, i32 5, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0))
  %12 = call i32 @xprintf(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %11)
  br label %24

13:                                               ; preds = %0
  store i32 1, i32* @beepcmd_active, align 4
  %14 = load i32, i32* @whyles, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %23, label %16

16:                                               ; preds = %13
  %17 = load i32*, i32** @STRbeepcmd, align 8
  %18 = call i64 @adrof1(i32* %17, i32* @aliases)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %16
  %21 = load i32*, i32** @STRbeepcmd, align 8
  %22 = call i32 @aliasrun(i32 1, i32* %21, i32* null)
  br label %23

23:                                               ; preds = %20, %16, %13
  br label %24

24:                                               ; preds = %23, %7
  store i32 0, i32* @beepcmd_active, align 4
  %25 = call i32 @cleanup_until(i32* @pintr_disabled)
  ret void
}

declare dso_local i32 @cleanup_push(i32*, i32) #1

declare dso_local i32 @aliasrun(i32, i32*, i32*) #1

declare dso_local i32 @xprintf(i8*, i32) #1

declare dso_local i32 @CGETS(i32, i32, i8*) #1

declare dso_local i64 @adrof1(i32*, i32*) #1

declare dso_local i32 @cleanup_until(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
